--- a/treasure.html
+++ b/treasure.html
@@ -26,40 +26,101 @@
 </div>
 <div class="container">
 <div class="row">
-    <div class="col-md-2"><img src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
-    <div class="col-md-2"><img src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
-    <div class="col-md-2"><img src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
-    <div class="col-md-2"><img src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
-    <div class="col-md-2"><img src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
+    <div class="col-md-2"><img id="0" onclick="check(0)"  src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
+    <div class="col-md-2"><img id="1" onclick="check(1)" src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
+    <div class="col-md-2"><img id="2" onclick="check(2)" src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
+    <div class="col-md-2"><img id="3" onclick="check(3)" src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
+    <div class="col-md-2"><img id="4" onclick="check(4)" src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
 </div>
 <div class="row">
-    <div class="col-md-2"><img src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
-    <div class="col-md-2"><img src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
-    <div class="col-md-2"><img src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
-    <div class="col-md-2"><img src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
-    <div class="col-md-2"><img src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
+    <div class="col-md-2"><img id="5" onclick="check(5)" src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
+    <div class="col-md-2"><img id="6" onclick="check(6)" src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
+    <div class="col-md-2"><img id="7" onclick="check(7)" src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
+    <div class="col-md-2"><img id="8" onclick="check(8)" src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
+    <div class="col-md-2"><img id="9" onclick="check(9)" src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
 </div>
 <div class="row">
-    <div class="col-md-2"><img src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
-    <div class="col-md-2"><img src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
-    <div class="col-md-2"><img src="help.jpg" rel="help" width="150" height="150"></div>
-    <div class="col-md-2"><img src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
-    <div class="col-md-2"><img src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
+    <div class="col-md-2"><img id="10" onclick="check(10)" src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
+    <div class="col-md-2"><img id="11" onclick="check(11)" src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
+    <div class="col-md-2"><img id="12" onclick="help(12)" src="help.jpg" rel="help" width="150" height="150"></div>
+    <div class="col-md-2"><img id="13" onclick="check(13)" src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
+    <div class="col-md-2"><img id="14" onclick="check(14)" src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
 </div>
 <div class="row">
-    <div class="col-md-2"><img src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
-    <div class="col-md-2"><img src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
-    <div class="col-md-2"><img src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
-    <div class="col-md-2"><img src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
-    <div class="col-md-2"><img src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>    
+    <div class="col-md-2"><img id="15" onclick="check(15)" src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
+    <div class="col-md-2"><img id="16" onclick="check(16)" src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
+    <div class="col-md-2"><img id="17" onclick="check(17)" src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
+    <div class="col-md-2"><img id="18" onclick="check(18)" src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
+    <div class="col-md-2"><img id="19" onclick="check(19)" src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>    
 </div>
 <div class="row">    
-    <div class="col-md-2"><img src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
-    <div class="col-md-2"><img src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
-    <div class="col-md-2"><img src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
-    <div class="col-md-2"><img src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
-    <div class="col-md-2"><img src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
+    <div class="col-md-2"><img id="20" onclick="check(20)" src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
+    <div class="col-md-2"><img id="21" onclick="check(21)" src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
+    <div class="col-md-2"><img id="22" onclick="check(22)" src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
+    <div class="col-md-2"><img id="23" onclick="check(23)" src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
+    <div class="col-md-2"><img id="24" onclick="check(24)" src="treasure_chests.jpg" rel="treasure_chest" width="150" height="150"></div>
 </div>
 </div>
+<script>
+
+    chestCount = 0;
+    score = 0;
+    lastCheck = 12;
+    treasureLocation = 18;
+    function check(position) {
+        var ids = [];
+        for(i=0;i<25;i++) 
+        { 
+            ids[i] = ""+i;
+        }
+        ans = help(position);
+        document.getElementById("help").innerHTML = ans; 
+        if(position == treasureLocation){
+            document.getElementById(ids[position]).setAttribute('src','treasure.jpg');
+            score += 1;
+            document.getElementById("score").innerHTML = "score is" + score;
+        }
+        else {
+            document.getElementById(ids[position]).setAttribute('src','empty.jpg');
+            chestCount += 1;
+            document.getElementById("chests").innerHTML = "chestCount" + chestCount;
+        }
+        position = lastCheck;
+    
+    }
+    
+    function help(last){
+        row1 = Math.ceil((last+1)/5);
+        col1 = (last % 5) + 1;
+        row2 = Math.ceil((treasureLocation+1)/5);
+        col2 = (treasureLocation % 5) + 1;
+        row = (row1 - row2);
+        col = (col1 - col2);
+        score+=2;
+        document.getElementById("score").innerHTML = "score is "+ score;
+        if(row1 == row2)
+            {
+                if(col<0)
+                   return "right";
+                else if (col>0)
+                    return "left";
+                else
+                    return "Sorry, no help available";    
+            }
+        if(col1 == col2)
+        {
+            if(row<0)
+            return "down";
+            else if(row>0)
+            return "up";
+            else
+            return "Sorry, no help available";        
+
+        }    
+        if(row1!=row2 || col1!=col2)
+            return "Sorry, no help available";
+    }
+</script>
+
 </body>
 </html>
