--- a/reaction.html
+++ b/reaction.html
@@ -18,32 +18,48 @@
   onclick="buttonPress2()">
   Click me change the color.</button>
   
-  <p id="target">I will become red </p>
+  <p id="target1">I will become red </p>
   
   <script> 
   function buttonPress1() {
     setTimeout(function(){
-      document.getElementById('target').style.color = "red"
+      document.getElementById('target1').style.color = "red"
     }, 3000)
   }
 
   function buttonPress2() {
     setTimeout(()=>{
-      document.getElementById('target').style.color = "red"
+      document.getElementById('target1').style.color = "red"
     }, 3000)
   }
   </script>
   <h2>reaction timer</h2>
   <div id="target">Your time</div>
   <div id="countdown">Count</div>
-  <button>Start Timer</button>
+  <button onclick="startTime()">Start Timer</button>
   <button onclick="recordReact()">React Now</button>
   <script>
     var myTime = undefined;
     function recordReact(){
+      myTime = undefined;
       myTime = Date.now();
       console.log(myTime);
     }
+    function startTime(){
+      for (let i = 0; i <4;i++) {
+        setTimeout(()=>{document.getElementById("countdown").innerHTML=i},(3-i)*1000);
+    
+        } 
+      
+    setTimeout(function(){ 
+      if(myTime==undefined)
+        document.getElementById("target").innerHTML = "Too Slow";
+      else {
+        var buttonTime = Date.now();
+        document.getElementById("target").innerHTML = "Time was " + (myTime - buttonTime);
+      }
+    },3000);
+  }
   </script>
 </body>
 </html>
