--- a/reaction.html
+++ b/reaction.html
@@ -33,7 +33,7 @@
     }, 3000)
   }
   </script>
-  <h2>reaction timer</h2>
+  <h2>BHARATH KUMAR REDDY MOPURU reaction timer</h2>
   <div id="target">Your time</div>
   <div id="countdown">Count</div>
   <button onclick="startTime()">Start Timer</button>
