--- a/treasure.html
+++ b/treasure.html
@@ -106,8 +106,8 @@
         row = (row1 - row2);
         col = (col1 - col2);
         score+=2;
-        chestCount++;
-        document.getElementById("chests").innerHTML = "chestCount "+ chestCount;
+        //chestCount++;
+        //document.getElementById("chests").innerHTML = "chestCount "+ chestCount;
         document.getElementById("score").innerHTML = "score is "+ score;
         if(row1 == row2)
             {
